@@ -4,6 +4,8 @@
   appearance dialog (bug #4997).
 - Make sure inputproto 1.4.2 is available before enabling device
   hotplugging in the code (bug #5084).
+- Remove unsigned clamp macro that broke applying the display settings
+  (bug #4966).
 
 4.6.0
 =====
